Fix overlap issue for dropup menu on action bar

--- a/src/nyc_trees/sass/partials/_map.scss
+++ b/src/nyc_trees/sass/partials/_map.scss
@@ -3,6 +3,9 @@
   .tab-status-map-tab &, .page-new-reservation & {
     position: static;
   }
+  .action-bar .dropdown-menu {
+    z-index: 1100;
+  }
 }
 
 .map-container {
